updated - fixed flexgap issue, more classes added

--- a/css/flexbox-util.css
+++ b/css/flexbox-util.css
@@ -118,7 +118,7 @@
  margin: 0 .25rem;
 }
 .flexgap-1 *:first-child {
-  margin: 0 .25 0 0rem;
+  margin: 0 .25rem 0 0;
 }
 .flexgap-1 *:last-child{
  margin: 0 0 0 .25rem;
@@ -127,8 +127,17 @@
  margin: 0 .5rem;
 }
 .flexgap-2 *:first-child {
-  margin: 0 .5 0 0rem;
+  margin: 0 .5rem 0 0;
 }
 .flexgap-2 *:last-child{
  margin: 0 0 0 .5rem;
+}
+.flexgap-3 *{
+ margin: 0 .75rem;
+}
+.flexgap-3 *:first-child {
+  margin: 0 .75rem 0 0;
+}
+.flexgap-3 *:last-child{
+ margin: 0 0 0 .75rem;
 }
